--- a/21 - Geolocation/index.html
+++ b/21 - Geolocation/index.html
@@ -53,5 +53,7 @@
       <span class="speed-value">0</span>
       <span class="units">KM/H</span>
     </h1>
+
+    <script src="./index.js"></script>
   </body>
 </html>
